--- a/Theme/Chicago95/gtk-3.0/gtk.css
+++ b/Theme/Chicago95/gtk-3.0/gtk.css
@@ -186,3 +186,4 @@
 @import url("apps/nemo.css"); 
 @import url("apps/synaptic.css");*/
 @import url("apps/lightdm-gtk-greeter.css");
+@import url("apps/xfce-panel-hacks.css");
